Sección 44: Registro de usuarios con PHP y MySQL
197.Escapar datos, 198.Maquetar alertas

--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -31,6 +31,21 @@ body {
   background: url(../img/cubes.png) #f4f4f4;
 }
 
+.alerta {
+  padding: 5px;
+  font-size: 14px;
+  color: white;
+  background: green;
+  box-shadow: 0px 1px 3px #ccc;
+  margin-block-end: 15px;
+  border-radius: 2px;
+}
+
+.alerta-error {
+  background-color: red;
+}
+
+
 /* Cabecera  */
 #cabecera {
   width: 85%;
