Sección 46: Categorías y entradas del blog
202. Listar categorias
203. Listar ultimas entradas
204. Mostrar más información de la entrada

--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -45,6 +45,13 @@ body {
   background-color: red;
 }
 
+.fecha {
+  color: #4e4e4e;
+  margin-block-start: 5px;
+  font-size: 14px;
+
+}
+
 
 /* Cabecera  */
 #cabecera {
