--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -182,6 +182,7 @@ input[type="submit"],
 .boton {
   width: 130px;
   text-align: center;
+  color: white !important;
 }
 .boton-naranja {
   background: orange;
