--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,17 @@ a:hover {
   color: red;
 }
 
+table {
+  border: 1px solid #555;
+  width: 100%;
+  text-align: center;
+}
+
+td {
+  border-top: 1px solid #ccc;
+  padding: 2px;
+}
+
 /* CONTAINER  */
 #container {
   width: 80%;
@@ -212,6 +223,12 @@ button, .button {
   background-color: #33ae3d;
   color: white !important;
   text-decoration: none;
+}
+
+.button-small {
+  width: 120px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 label,
