--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -288,6 +288,14 @@ button {
   text-align: center;
 }
 
+.product a {
+  color: black;
+  text-decoration: none;
+}
+
+.product a:hover {
+  color: #555;
+}
 
 .product img {
   height: 170px;
