--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -306,10 +306,47 @@ button {
   font-size: 18px;
   margin-bottom: 10px;
 }
+
 .product p {
   font-weight: bold;
   color: #555;
   margin-bottom: 10px;
+}
+
+.detail-product {
+  width: 100%;
+}
+
+.detail-product .image{
+  display: block;
+  width: 47%;
+  float: left;
+}
+
+.detail-product img{
+  display: block;
+  width: 100%;
+  float: left;
+}
+
+.detail-product .data{
+  width: 50%;
+  float: right;
+}
+
+.datail-product .description {
+  margin-block-end: 20px;
+}
+
+.datail-product .price {
+  margin-block-end: 20px;
+  font-size: 20px;
+  color: #444;
+}
+
+.detail-product .button {
+  width: 200px; 
+  text-align: center;
 }
 
 /* FOOTER  */
