--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,7 @@ a:hover {
 }
 
 table {
-  border: 1px solid #555;
+  border-bottom: 1px solid #ccc;
   width: 100%;
   text-align: center;
 }
@@ -302,6 +302,12 @@ button {
   margin-bottom: 10px;
 }
 
+.img_carrito {
+  height: 80px;
+  display: block;
+  margin: 10px auto;
+}
+
 .product h2 {
   font-size: 18px;
   margin-bottom: 10px;
@@ -345,7 +351,7 @@ button {
 }
 
 .detail-product .button {
-  width: 200px; 
+  width: 200px;
   text-align: center;
 }
 
