--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -367,15 +367,26 @@ button {
 }
 
 /* CARRITO */
+.delete-carrito {
+  width: 277px;
+  float: left;
+}
+
+.button-delete {
+  display: block;
+  float: left;
+  width: 96px;
+}
+
+.button-carrito {
+  width: 70px;
+  margin: 0px auto;
+  text-align: center;
+}
+
 .total-carrito {
   width: 277px;
   float: right;
-}
-
-.total-carrito h4 { /*CAMBIÉ POR H3*/
-  display: block;
-  float: left;
-  margin-block-start: 5px;
 }
 
 .button-pedido {
@@ -384,5 +395,24 @@ button {
   width: 96px;
 }
 
+.total-carrito h4 { /*CAMBIÉ POR H3*/
+  display: block;
+  float: left;
+  margin-block-start: 5px;
+}
+
+.updown-unidades{
+  width: 80px;
+  margin: 0px auto;
+}
+
+
+.updown-unidades .button {
+  display: block;
+  width: 20px;
+  float: left;
+  padding: 2px;
+  margin: 7px;
+}
 
 
